fabric/testdata/out/ing_spp-product-search-pre-prod-default-404-route-spp-product-search-pre-prod-master-299.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"7ac92c28-f589-48e8-98fe-454926fa0c25","deployment-id":"d-79xdtzozq679c8g5yc41iz923","pipeline-id":"l-kegu7kiv13mu2pr57d32arxh5"},"name":"spp-product-search-pre-prod-default-404-route-spp-product-search-pre-prod-master-299","namespace":"default"},"spec":{"rules":[{"host":"spp-product-search-pre-prod-master-299.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-search- [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2021-06-21T13:03:13Z"
  generation: 1
  labels:
    controller-uid: 7ac92c28-f589-48e8-98fe-454926fa0c25
    deployment-id: d-79xdtzozq679c8g5yc41iz923
    pipeline-id: l-kegu7kiv13mu2pr57d32arxh5
  name: spp-product-search-pre-prod-default-404-route-spp-product-search-pre-prod-master-299
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-search-pre-prod
    uid: 7ac92c28-f589-48e8-98fe-454926fa0c25
  resourceVersion: "1357489963"
  uid: 76c92a22-9366-47e9-b55a-a545fcaf0bb5
spec:
  rules:
  - host: spp-product-search-pre-prod-master-299.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-pre-prod-master-299
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
